using System.Diagnostics;
using Api.Models.Common;
using Api.Models.WebSocket;
using Api.Services.AddressParser;
using Api.Services.Normalization;
using Api.Services.RequestManagement;
using Api.Services.Search;
using Microsoft.AspNetCore.SignalR;

namespace Api.Hubs;

/// <summary>
/// SignalR Hub –¥–ª—è –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∑–∞–ø—Ä–æ—Å–æ–≤ –≥–µ–æ–∫–æ–¥–∏—Ä–æ–≤–∞–Ω–∏—è –æ—Ç React –∫–ª–∏–µ–Ω—Ç–∞
/// </summary>
public class GeocodeHub : Hub
{
    private readonly IPythonSearchClient _pythonSearchClient;
    private readonly IAddressParserClient _addressParserClient;
    private readonly IActiveRequestsManager _requestsManager;
    private readonly IAddressNormalizer _addressNormalizer;
    private readonly ILogger<GeocodeHub> _logger;

    public GeocodeHub(
        IPythonSearchClient pythonSearchClient,
        IAddressParserClient addressParserClient,
        IActiveRequestsManager requestsManager,
        IAddressNormalizer addressNormalizer,
        ILogger<GeocodeHub> logger)
    {
        _pythonSearchClient = pythonSearchClient;
        _addressParserClient = addressParserClient;
        _requestsManager = requestsManager;
        _addressNormalizer = addressNormalizer;
        _logger = logger;
    }

    /// <summary>
    /// –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –ø–æ–∏—Å–∫ –∞–¥—Ä–µ—Å–∞ –æ—Ç –∫–ª–∏–µ–Ω—Ç–∞ (—Å –ø–æ–¥–¥–µ—Ä–∂–∫–æ–π –æ—Ç–º–µ–Ω—ã)
    /// </summary>
    /// <param name="request">–ó–∞–ø—Ä–æ—Å —Å –ø–æ–∏—Å–∫–æ–≤–æ–π —Å—Ç—Ä–æ–∫–æ–π</param>
    public async Task SearchAddress(GeocodeRequest request)
    {
        var connectionId = Context.ConnectionId;
        var requestId = request.RequestId;
        var stopwatch = Stopwatch.StartNew();

        _logger.LogInformation(
            "–ü–æ–ª—É—á–µ–Ω –∑–∞–ø—Ä–æ—Å –Ω–∞ –ø–æ–∏—Å–∫. ConnectionId: {ConnectionId}, RequestId: {RequestId}, Query: {Query}",
            connectionId, requestId, request.Query);

        // –°–æ–∑–¥–∞–µ–º CancellationTokenSource –¥–ª—è —ç—Ç–æ–≥–æ –∑–∞–ø—Ä–æ—Å–∞
        var cts = _requestsManager.CreateRequest(requestId);

        try
        {
            // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å: –Ω–∞—á–∞–ª–æ –æ–±—Ä–∞–±–æ—Ç–∫–∏
            await Clients.Caller.SendAsync("SearchProgress", new SearchProgress
            {
                RequestId = requestId,
                Status = "processing",
                Message = "–û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞...",
                ProgressPercent = 10
            }, cts.Token);

            // –í–∞–ª–∏–¥–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞
            if (!_addressNormalizer.IsValid(request.Query))
            {
                var errorResponse = ApiResponse<SearchResultData>.Error(
                    "–ü–æ–∏—Å–∫–æ–≤–∞—è —Å—Ç—Ä–æ–∫–∞ –Ω–µ–∫–æ—Ä—Ä–µ–∫—Ç–Ω–∞",
                    "INVALID_QUERY",
                    new ResponseMetadata
                    {
                        RequestId = requestId,
                        ExecutionTimeMs = stopwatch.ElapsedMilliseconds,
                        WasCancelled = false
                    });

                await Clients.Caller.SendAsync("SearchCompleted", errorResponse, cts.Token);
                return;
            }

            // –ü–∞—Ä—Å–∏–Ω–≥ –∏ –Ω–æ—Ä–º–∞–ª–∏–∑–∞—Ü–∏—è –∞–¥—Ä–µ—Å–∞ —á–µ—Ä–µ–∑ Address Parser (libpostal)
            await Clients.Caller.SendAsync("SearchProgress", new SearchProgress
            {
                RequestId = requestId,
                Status = "normalizing",
                Message = "–ü–∞—Ä—Å–∏–Ω–≥ –∏ –Ω–æ—Ä–º–∞–ª–∏–∑–∞—Ü–∏—è –∞–¥—Ä–µ—Å–∞...",
                ProgressPercent = 25
            }, cts.Token);

            var normalizeResult = await _addressNormalizer.NormalizeAndParseAsync(request.Query);
            _logger.LogDebug(
                "–†–µ–∑—É–ª—å—Ç–∞—Ç –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∞–¥—Ä–µ—Å–∞: Normalized={Normalized}, City={City}, Road={Road}, House={House}",
                normalizeResult.NormalizedAddress,
                normalizeResult.Components?.City,
                normalizeResult.Components?.Road,
                normalizeResult.Components?.HouseNumber);

            // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å: –æ—Ç–ø—Ä–∞–≤–∫–∞ –≤ Python —Å–µ—Ä–≤–∏—Å
            await Clients.Caller.SendAsync("SearchProgress", new SearchProgress
            {
                RequestId = requestId,
                Status = "searching",
                Message = "–ü–æ–∏—Å–∫ –≤ –±–∞–∑–µ –¥–∞–Ω–Ω—ã—Ö...",
                ProgressPercent = 50
            }, cts.Token);

            // –í—ã–∑–æ–≤ Python gRPC —Å–µ—Ä–≤–∏—Å–∞ —Å CancellationToken –∏ —Å—Ç—Ä—É–∫—Ç—É—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–º–∏ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–∞–º–∏
            var grpcResponse = await _pythonSearchClient.SearchAddressAsync(
                normalizeResult.NormalizedAddress,
                request.Query, // –û—Ä–∏–≥–∏–Ω–∞–ª—å–Ω—ã–π –∑–∞–ø—Ä–æ—Å –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
                normalizeResult.Components, // üÜï –°—Ç—Ä—É–∫—Ç—É—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –∏–∑ libpostal
                request.Limit,
                requestId,
                cts.Token);

            // –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –±—ã–ª –ª–∏ –∑–∞–ø—Ä–æ—Å –æ—Ç–º–µ–Ω–µ–Ω
            if (cts.Token.IsCancellationRequested)
            {
                _logger.LogInformation("–ó–∞–ø—Ä–æ—Å {RequestId} –±—ã–ª –æ—Ç–º–µ–Ω–µ–Ω", requestId);
                return;
            }

            // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å: –æ–±—Ä–∞–±–æ—Ç–∫–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
            await Clients.Caller.SendAsync("SearchProgress", new SearchProgress
            {
                RequestId = requestId,
                Status = "finalizing",
                Message = "–û–±—Ä–∞–±–æ—Ç–∫–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤...",
                ProgressPercent = 90
            }, cts.Token);

            // –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å—Ç–∞—Ç—É—Å –æ—Ç–≤–µ—Ç–∞ –æ—Ç Python
            if (grpcResponse.Status.Code != Grpc.StatusCode.Ok)
            {
                var errorResponse = ApiResponse<SearchResultData>.Error(
                    grpcResponse.Status.Message,
                    grpcResponse.Status.Code.ToString(),
                    new ResponseMetadata
                    {
                        RequestId = requestId,
                        ExecutionTimeMs = stopwatch.ElapsedMilliseconds
                    });

                await Clients.Caller.SendAsync("SearchCompleted", errorResponse, cts.Token);
                return;
            }

            // –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã gRPC –≤ DTO –¥–ª—è –∫–ª–∏–µ–Ω—Ç–∞
            var searchResultData = new SearchResultData
            {
                SearchedAddress = grpcResponse.SearchedAddress,
                TotalFound = grpcResponse.TotalFound,
                Objects = grpcResponse.Objects.Select(obj => new AddressObjectDto
                {
                    Locality = obj.Locality,
                    Street = obj.Street,
                    Number = obj.Number,
                    Lon = obj.Lon,
                    Lat = obj.Lat,
                    Score = obj.Score,
                    AdditionalInfo = obj.AdditionalInfo != null
                        ? new AddressAdditionalInfo
                        {
                            PostalCode = obj.AdditionalInfo.PostalCode,
                            District = obj.AdditionalInfo.District,
                            FullAddress = obj.AdditionalInfo.FullAddress,
                            ObjectId = obj.AdditionalInfo.ObjectId
                        }
                        : null
                }).ToList()
            };

            // –û–±–æ—Ä–∞—á–∏–≤–∞–µ–º –≤ ApiResponse
            var successResponse = ApiResponse<SearchResultData>.Ok(
                searchResultData,
                new ResponseMetadata
                {
                    RequestId = requestId,
                    ExecutionTimeMs = stopwatch.ElapsedMilliseconds,
                    WasCancelled = false
                });

            // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —Ñ–∏–Ω–∞–ª—å–Ω—ã–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã –∫–ª–∏–µ–Ω—Ç—É
            await Clients.Caller.SendAsync("SearchCompleted", successResponse, cts.Token);

            _logger.LogInformation(
                "–ü–æ–∏—Å–∫ –∑–∞–≤–µ—Ä—à–µ–Ω. RequestId: {RequestId}, –ù–∞–π–¥–µ–Ω–æ: {Count}, –í—Ä–µ–º—è: {Ms}ms",
                requestId, searchResultData.Objects.Count, stopwatch.ElapsedMilliseconds);
        }
        catch (OperationCanceledException)
        {
            _logger.LogInformation("–ó–∞–ø—Ä–æ—Å {RequestId} –±—ã–ª –æ—Ç–º–µ–Ω–µ–Ω –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º", requestId);

            var cancelledResponse = ApiResponse<SearchResultData>.Error(
                "–ó–∞–ø—Ä–æ—Å –±—ã–ª –æ—Ç–º–µ–Ω–µ–Ω",
                "CANCELLED",
                new ResponseMetadata
                {
                    RequestId = requestId,
                    ExecutionTimeMs = stopwatch.ElapsedMilliseconds,
                    WasCancelled = true
                });

            await Clients.Caller.SendAsync("SearchCompleted", cancelledResponse);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ –∑–∞–ø—Ä–æ—Å–∞ {RequestId}", requestId);

            var errorResponse = ApiResponse<SearchResultData>.Error(
                $"–û—à–∏–±–∫–∞ –ø—Ä–∏ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏–∏ –ø–æ–∏—Å–∫–∞: {ex.Message}",
                "INTERNAL_ERROR",
                new ResponseMetadata
                {
                    RequestId = requestId,
                    ExecutionTimeMs = stopwatch.ElapsedMilliseconds
                });

            await Clients.Caller.SendAsync("SearchCompleted", errorResponse);
        }
        finally
        {
            stopwatch.Stop();
            _requestsManager.CompleteRequest(requestId);
        }
    }

    /// <summary>
    /// –û—Ç–º–µ–Ω—è–µ—Ç –∞–∫—Ç–∏–≤–Ω—ã–π –∑–∞–ø—Ä–æ—Å –ø–æ ID
    /// </summary>
    /// <param name="request">–ó–∞–ø—Ä–æ—Å —Å ID –¥–ª—è –æ—Ç–º–µ–Ω—ã</param>
    public Task CancelSearch(CancelSearchRequest request)
    {
        _logger.LogInformation("–ü–æ–ª—É—á–µ–Ω –∑–∞–ø—Ä–æ—Å –Ω–∞ –æ—Ç–º–µ–Ω—É. RequestId: {RequestId}", request.RequestId);

        var cancelled = _requestsManager.CancelRequest(request.RequestId);

        if (cancelled)
        {
            _logger.LogInformation("–ó–∞–ø—Ä–æ—Å {RequestId} —É—Å–ø–µ—à–Ω–æ –æ—Ç–º–µ–Ω–µ–Ω", request.RequestId);
        }
        else
        {
            _logger.LogWarning("–ó–∞–ø—Ä–æ—Å {RequestId} –Ω–µ –Ω–∞–π–¥–µ–Ω –∏–ª–∏ —É–∂–µ –∑–∞–≤–µ—Ä—à–µ–Ω", request.RequestId);
        }

        return Task.CompletedTask;
    }

    /// <summary>
    /// –ü—Ä–æ–≤–µ—Ä—è–µ—Ç —Å—Ç–∞—Ç—É—Å –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Python gRPC —Å–µ—Ä–≤–∏—Å—É (–≥–µ–æ–∫–æ–¥–∏—Ä–æ–≤–∞–Ω–∏–µ)
    /// </summary>
    /// <returns>True –µ—Å–ª–∏ Python —Å–µ—Ä–≤–∏—Å –¥–æ—Å—Ç—É–ø–µ–Ω, –∏–Ω–∞—á–µ False</returns>
    public async Task<bool> CheckPythonServiceStatus()
    {
        _logger.LogDebug("–ü—Ä–æ–≤–µ—Ä–∫–∞ —Å—Ç–∞—Ç—É—Å–∞ Python —Å–µ—Ä–≤–∏—Å–∞ –æ—Ç –∫–ª–∏–µ–Ω—Ç–∞ {ConnectionId}", Context.ConnectionId);

        var isAvailable = await _pythonSearchClient.CheckHealthAsync();

        _logger.LogDebug("–°—Ç–∞—Ç—É—Å Python —Å–µ—Ä–≤–∏—Å–∞: {Status}", isAvailable ? "–î–æ—Å—Ç—É–ø–µ–Ω" : "–ù–µ–¥–æ—Å—Ç—É–ø–µ–Ω");

        return isAvailable;
    }

    /// <summary>
    /// –ü—Ä–æ–≤–µ—Ä—è–µ—Ç —Å—Ç–∞—Ç—É—Å –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Address Parser gRPC —Å–µ—Ä–≤–∏—Å—É (–Ω–æ—Ä–º–∞–ª–∏–∑–∞—Ü–∏—è –∞–¥—Ä–µ—Å–æ–≤)
    /// </summary>
    /// <returns>True –µ—Å–ª–∏ Address Parser —Å–µ—Ä–≤–∏—Å –¥–æ—Å—Ç—É–ø–µ–Ω, –∏–Ω–∞—á–µ False</returns>
    public async Task<bool> CheckAddressParserServiceStatus()
    {
        _logger.LogDebug("–ü—Ä–æ–≤–µ—Ä–∫–∞ —Å—Ç–∞—Ç—É—Å–∞ Address Parser —Å–µ—Ä–≤–∏—Å–∞ –æ—Ç –∫–ª–∏–µ–Ω—Ç–∞ {ConnectionId}", Context.ConnectionId);

        var isAvailable = await _addressParserClient.CheckHealthAsync();

        _logger.LogDebug("–°—Ç–∞—Ç—É—Å Address Parser —Å–µ—Ä–≤–∏—Å–∞: {Status}", isAvailable ? "–î–æ—Å—Ç—É–ø–µ–Ω" : "–ù–µ–¥–æ—Å—Ç—É–ø–µ–Ω");

        return isAvailable;
    }

    /// <summary>
    /// –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø—Ä–∏ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–∏ –∫–ª–∏–µ–Ω—Ç–∞
    /// </summary>
    public override async Task OnConnectedAsync()
    {
        _logger.LogInformation("–ö–ª–∏–µ–Ω—Ç –ø–æ–¥–∫–ª—é—á–µ–Ω: {ConnectionId}", Context.ConnectionId);
        await base.OnConnectedAsync();
    }

    /// <summary>
    /// –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø—Ä–∏ –æ—Ç–∫–ª—é—á–µ–Ω–∏–∏ –∫–ª–∏–µ–Ω—Ç–∞
    /// </summary>
    public override async Task OnDisconnectedAsync(Exception? exception)
    {
        if (exception != null)
        {
            _logger.LogError(exception, "–ö–ª–∏–µ–Ω—Ç –æ—Ç–∫–ª—é—á–∏–ª—Å—è —Å –æ—à–∏–±–∫–æ–π: {ConnectionId}", Context.ConnectionId);
        }
        else
        {
            _logger.LogInformation("–ö–ª–∏–µ–Ω—Ç –æ—Ç–∫–ª—é—á–∏–ª—Å—è: {ConnectionId}", Context.ConnectionId);
        }

        await base.OnDisconnectedAsync(exception);
    }
}
